fixed overlapping members error by adding responsive design

--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,3 @@
- 
 .ch-grid {
 	padding: 0;
 	list-style: none;
@@ -22,4 +21,40 @@
 	height: 12vw;
 	display: inline-block;
 	margin: 1vw;
+}
+
+img {
+	border-radius:500px;
+	width:180px;
+}
+
+.name {
+	font-size:150%;
+}
+
+.title {
+	font-size: 100%;
+	 white-space:nowrap;
+}
+
+.text {
+
+}
+
+@media (max-width:1400px) {
+	img {
+		width: 75px;
+	}
+	.name {
+		font-size:100%;
+	}
+	
+	.title {
+		font-size: 50%;
+		 white-space:nowrap;
+	}
+	
+	.text {
+		font-size: 50%
+	}
 }
